--- a/app/scss/modules/_form.scss
+++ b/app/scss/modules/_form.scss
@@ -1,7 +1,11 @@
+#input-area {
+	text-align: center;
+	margin-top: 30px;
+}
 
 #submit-field {
 	height: 30px;
-	font-size: 30px;
+	font-size: 20px;
 }
 
 #result {
